# zork-gpt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: backend-deployment.yml  frontend-deployment.yml
backend/: app.py  requirements.txt
backend/chatbots/: __init__.py  simpleGPTChatbot.py  utils.py
backend/chatbots/prompt_templates/: chat_init.txt
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: UserInput.tsx
frontend/src/components/styles/: Header.css  Terminal.css  UserInput.css
zork-gpt/: .gitignore  README.md
zork-gpt/chatbot/: langchainGPTChatbot.py  test.ipynb
zork-gpt/chatbot/prompt_templates/: init.txt  inventory.txt  room.txt
zork-gpt/prototype/: README.md
zork-gpt/prototype/backend/: app.py
zork-gpt/prototype/backend/chatbots/: utils.py
zork-gpt/prototype/backend_therapt/chatbots/: dialoGPTChatbot.py  simpleGPTChatbot.py
zork-gpt/prototype/backend_zork/: app.py
zork-gpt/prototype/backend_zork/chatbots/: dialoGPTChatbot.py  langchainGPTChatbot.py  utils.py
zork-gpt/prototype/backend_zork/chatbots/prompt_templates/: room_init.txt
zork-gpt/prototype/frontend/therapt/: package-lock.json  package.json  tailwind.config.js
zork-gpt/prototype/frontend/therapt/src/components/: AIMessage.tsx  ChatArea.tsx  ChatArea_old.tsx  ChatInput.tsx  Layout.tsx  LoadChatSideBar.tsx  SideBar.tsx  TopBar.tsx  (+1 more)
zork-gpt/prototype/zork_frontend/: package-lock.json
zork-gpt/prototype/zork_frontend/src/: App.tsx  custom_types.ts
zork-gpt/prototype/zork_frontend/src/components/: Header.tsx  Terminal.tsx
(+1 files in other folders)
