[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zork-gpt"
description = "gpt chatbot for playing zork"
authors = [
    { name = "Lukas Wolf" },
    { name = "Dionys Schrag" },
]
readme = "README.md"
urls = {github = "https://github.com/lu-wo/zork-gpt"}
dynamic = ["version"]

[tool.setuptools]
packages.find = { where = "." }

[tool.setuptools.dynamic]
version = {attr = "zork-gpt.__version__"}
